# ontologenius_query

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  package.xml
docs/: Download.html  InstallOntologenius.html  Usage.html  index.html
docs/style/: ontologenius_api.css
files/: ontology_colors_robot.owl  testIndividuals.owl
include/ontologenius_query/: QueryAnalyzer.h  VariableStorage.h  ressource.h
include/ontologenius_query/full/: FullAnalyser.h
launch/: ontologenius_query_full_test.launch  ontologenius_query_test.launch
src/: QueryAnalyzer.cpp  VariableStorage.cpp
src/full/: FullAnalyser.cpp
src/nodes/: main.cpp  multi.cpp  single.cpp
src/tests/: ontologenius_query_test.cpp
srv/: OntologeniusQueryFullService.srv  OntologeniusQueryService.srv
test/: ontologenius_query.test
